@@ -1,4 +1,4 @@
 
 #define VBI_VERSION_MAJOR 0
 #define VBI_VERSION_MINOR 2
-#define VBI_VERSION_MICRO 26
+#define VBI_VERSION_MICRO 27
